--- a/videogames.html
+++ b/videogames.html
@@ -59,6 +59,7 @@
             "Wii": [
                 { "title": "Call of Duty: Modern Warfare 3", "release_year": 2011, "developer": "Activision", "price": 10, "format": "Physical" },
                 { "title": "Just Dance: Disney", "release_year": 2019, "developer": "Ubisoft", "price": 15, "format": "Physical" },
+                { "title": "Super Paper Mario", "release_year": 2007, "developer": "Intelligent Systems", "price": 15, "format": "Physical" },
                 { "title": "Disney Tangled", "release_year": 2019, "developer": "Ubisoft", "price": 15, "format": "Physical" },
                 { "title": "Disney Pixar Toy Story", "release_year": 2011, "developer": "Disney", "price": 15, "format": "Physical" },
                 { "title": "Wii fit plus", "release_year": 2018, "developer": "Nintendo", "price": 15, "format": "Physical" },
@@ -68,6 +69,11 @@
                 { "title": "Epic Mickey 2 The power of two", "release_year": 2006, "developer": "Disney Interactive Studios", "price": 7, "format": "Physical" },
                 { "title": "Final Fantasy The Cristal Bearers", "release_year": 2007, "developer": "Square Enix", "price": 18, "format": "Physical" },
                 { "title": "Tomb Raider Underworld", "release_year": 2006, "developer": "Eidos", "price": 10, "format": "Physical" },
+                { "title": "Guitar Hero World Tour", "release_year": 2008, "developer": "Neversoft", "publisher": "Activision", "price": 10, "format": "Physical" },
+            ],
+            "Wii U": [
+                { "title": "Guitar Hero Live", "release_year": 2015, "developer": "Free Style Games", "publisher": "Activision", "price": 10, "format": "Physical" },
+                { "title": "Assassin's Creed III", "release_year": 2012, "developer": "Ubisoft", "publisher": "Ubisoft", "price": 10, "format": "Physical" },
             ],
             "Nintendo Switch": [
                 { "title": "Dragon Quest I, II, III", "release_year": 2017, "developer": "Square Enix", "publisher": "Nintendo", "price": 35, "format": "Physical" },
@@ -87,13 +93,34 @@
                 { "title": "The Legend of Zelda: Link's Awakening", "release_year": 2019, "developer": "Grezzo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
                 { "title": "The Legend of Zelda: Skyward Sword HD", "release_year": 2021, "developer": "Tanalus Media", "publisher": "Nintendo", "price": 60, "format": "Physical" },
                 { "title": "Xenoblade Chronicles 3", "release_year": 2022, "developer": "Monolith Soft", "publisher": "Nintendo", "price": 60, "format": "Physical" },
-                { "title": "Xenoblade Chronicles", "release_year": 20, "developer": "", "publisher": "Nintendo", "price": 60, "format": "Physical" },
-                { "title": "Xenoblade Chronicles", "release_year": 20, "developer": "", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Xenoblade Chronicles X: Definitive Edition", "release_year": 2015, "developer": "Monolith Soft", "publisher": "Nintendo", "price": 0, "format": "Physical" },
                 { "title": "WarioWare: Get It Together!", "release_year": 2021, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 60, "format": "Physical" },
                 { "title": "The Wonderful 101: Remastered", "release_year": 2018, "developer": "Platinum Games", "publisher": "Nintendo", "price": 60, "format": "Physical" },
                 { "title": "The Legend of Zelda: Tears of the Kingdom", "release_year": 2023, "developer": "Nintendo", "publisher": "Nintendo", "price": 60, "format": "Physical" },
-                { "title": "Nintendo World Championships: NES Edition", "release_year": 2024, "developer": "indieszero", "publisher": "Nintendo", "price": 60, "format": "Physical" },
+                { "title": "Nintendo World Championships: NES Edition", "release_year": 2024, "developer": "indieszero", "publisher": "Nintendo", "price": 60, "format": "Physical", "cover": "nintendo_world_champ.jpg" },
                 { "title": "Just Dance 2019", "release_year": 2018, "developer": "Ubisoft", "publisher": "Ubisoft", "price": 60, "format": "Physical" },
+                { "title": "Hyrule Warriors: Age of Calamity", "release_year": 2020, "developer": "Omega Force", "publisher": "Nintendo", "price": 0, "format": "Physical" },
+                { "title": "Fire Emblem Warriors", "release_year": 2017, "developer": "Omega Force", "publisher": "Nintendo", "price": 0, "format": "Physical" },
+                { "title": "Fire Emblem: Three Houses", "release_year": 2019, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical" },
+                { "title": "Fire Emblem Engage", "release_year": 2023, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical" },
+                { "title": "Cuphead", "release_year": 2017, "developer": "Studio MDHR", "publisher": "Studio MDHR", "price": 0, "format": "Physical" },
+                { "title": "Borderlands Legendary Collection", "release_year": 2020, "developer": "Gearbox", "publisher": "2K", "price": 0, "format": "Physical" },
+                { "title": "Bayonetta Origins: Cereza and the Lost Demon", "release_year": 2023, "developer": "PlatinumGames", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "bayonetta_origins.jpg" },
+                { "title": "XIII", "release_year": 2020, "developer": "Ubisoft", "publisher": "Ubisodt", "price": 0, "format": "Physical", cover: "xiii.jpg"  },
+                { "title": "Super Mario Wonder", "release_year": 2023, "developer": "Nintendo", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "mario_wonder.jpg"  },
+                { "title": "Paper Mario: The Origami King", "release_year": 2020, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "paper_mario_origami_king.jpg"  },
+                { "title": "New Super Mario Bros", "release_year": 2019, "developer": "Nintendo", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "new_super_mario_bros_u.png"  },
+                { "title": "Neo: The World Ends With You", "release_year": 2021, "developer": "Square Enix", "publisher": "Square Enix", "price": 0, "format": "Physical", cover: "new_world_ends_with_you.jpg"  },
+                { "title": "Metroid Prime: Remastered", "release_year": 2023, "developer": "Retro Studios", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "metroid_prime.jpg"  },
+                { "title": "Metroid Dread", "release_year": 2021, "developer": "Mercury Steam", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "metroid_dread.png" },
+                { "title": "Master Detective Archives: Rain Code", "release_year": 2023, "developer": "	Spike Chunsoft", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "rain_code.png" },
+                { "title": "Mario vs. Donkey Kong", "release_year": 2025, "developer": "Nintendo", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "mario_vs_donkey.jpg" },
+                { "title": "Mario Party Superstars", "release_year": 2021, "developer": "ND Cube", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "mario_party_superstars.jpg" },
+                { "title": "Mario + Rabbids Sparks of Hope", "release_year": 2022, "developer": "Ubisoft", "publisher": "Ubisoft", "price": 0, "format": "Physical", cover: "mario_rabbids_sparks.jpg" },
+                { "title": "Mario & Luigi: Brothership", "release_year": 2024, "developer": "Acquire", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "bayonetta_origins.jpg" },
+                { "title": "Luigi's Mansion 3", "release_year": 2019, "developer": "Next Level Games", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "luigi_mansion_3.png" },
+                { "title": "Kirby and the Forgotten Land", "release_year": 2022, "developer": "HAL Laboratory", "publisher": "Nintendo", "price": 0, "format": "Physical", cover: "kirby_forgotten_land.png" },
+                
             ],
             "Nintendo Switch 2": [
                 { "title": "Donkey Kong Bananza", "release_year": 2025, "developer": "Nintendo", "price": 69.99, "format": "Physical" },
@@ -102,8 +129,14 @@
             "GameBoy Color": [
                 { "title": "The Legend of Zelda: Link's Awakening DX", "release_year": 2006, "developer": "Nintendo", "price": 0, "format": "Physical" }
             ],
+            "GameCube": [
+                { "title": "SpongeBob SquarePants: Battle for Bikini Bottom", "release_year": 2003, "developer": "Heavy Iron Studios", "publisher": "THQ", "price": 0, "format": "Physical" },
+                { "title": "Paper Mario: The Thousand-Year Door", "release_year": 2024, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical" }
+            ],
             "3DS": [
-                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "price": 5, "format": "Physical" }
+                { "title": "Animal Crossing: Happy Home Designer", "release_year": 2017, "developer": "Nintendo", "publisher": "", "price": 5, "format": "Physical" },
+                { "title": "Fire Emblem Fates: Birthright", "release_year": 2015, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical" },
+                { "title": "Fire Emblem Fates: ", "release_year": 2015, "developer": "Intelligent Systems", "publisher": "Nintendo", "price": 0, "format": "Physical" }
             ],
             "Atari": [
                 { "title": "Jungle Hunt", "release_year": 1982, "developer": "Atari", "price": 5, "format": "Physical" },
@@ -111,6 +144,13 @@
             ],
             "Sega Genesis": [
                 { "title": "Animaniacs", "release_year": 1994, "developer": "Konami", "price": 15, "format": "Physical" }
+            ],
+            "Playstation 4": [
+                { "title": "Uncharted 4: A Thief's End: ", "release_year": 2016, "developer": "Naughty Dog", "publisher": "Sony Interactive Entertainment", "price": 45, "format": "Physical" },
+                { "title": "Marvel's Spider-Man", "release_year": 2018, "developer": "Insomniac Games", "publisher": "Sony Interactive Entertainment", "price": 45, "format": "Physical" },
+                { "title": "Uncharted: The Nathan Drake Collection", "release_year": 2015, "developer": "Blue Point", "publisher": "Sony Interactive Entertainment", "price": 45, "format": "Physical" },
+                { "title": "Starlink: Battle for Atlas", "release_year": 2018, "developer": "Ubisoft", "publisher": "Ubisoft", "price": 45, "format": "Physical" },
+                { "title": "Final Fantasy VII Remake", "release_year": 2020, "developer": "Square Enix", "publisher": "Square Enix", "price": 45, "format": "Physical" },
             ],
         };
 
@@ -143,15 +183,18 @@
                         <th>Title</th>
                         <th>Release Year</th>
                         <th>Developer</th>
+                        <th>Publisher</th>
                         <th>Price</th>
                     </tr>
                     ${games.map(game => {
                         let gameTitle = game.title + (game['format'] === 'Digital' ? ' (Digital)' : '');
+                        let gamePublisher = game.publisher ? game.publisher : 'N/A';
                         return `
                         <tr>
                             <td>${gameTitle}</td>
                             <td>${game.release_year}</td>
                             <td>${game.developer}</td>
+                            <td>${gamePublisher}</td>
                             <td>$ ${game.price}</td>
                         </tr>`;
                     }).join('')}
