books and mangas

--- a/books.html
+++ b/books.html
@@ -50,6 +50,11 @@
         <h1>My Books Collection</h1>
         <p>This page is a placeholder for my Books collection.<br>
         Check back soon for updates!</p>
+        <ul>
+            <li>Zelda Encyclopedia</li>
+            <li>The Legend of Zelda: Tears of the Kingdom.The complete official guide Collector's Edition</li>
+            <li>Final Fantasy XII</li>
+        </ul>
     </div>
 </body>
 </html>
