--- a/mangas.html
+++ b/mangas.html
@@ -19,6 +19,12 @@
     <div class="container">
         <h1>My Mangas Collection</h1>
         <ul>
+            <li>Zelda Twilight Princess (Complete Box Set)</li>
+            <li>Demon Slayer (Complete Box Set)</li>
+            <li>Mario</li>
+            <li>Kirby</li>
+        </ul>
+        <ul>
             <li><a href="index.html">Back to Main</a></li>
         </ul>
     </div>
